--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <canvas class="threejs"></canvas>
     <!-- <script type="module" src="Geometery/geometry.js"></script> -->
-    <script type="module" src="Materials/materials.js"></script>
+    <!-- <script type="module" src="Materials/materials.js"></script> -->
+    <script type="module" src="texture/texture.js"></script>
     <!--
       <script
       type="module"
